# psl_iasd_works

./: README.md  pyproject.toml
deep_learning/: Deep_Learning-Go_Project.ipynb  README.md
deep_learning/Data/: mobilenet_FT2_filters32trunk16block31ratio16_vw4_training_history.json  mobilenet_FT2_filters64trunk16block16ratio16_vw4_training_history.json  mobilenet_FT2_filters64trunk48block8ratio16_vw4_training_history.json  mobilenet_FT3_cosine_filters32trunk16block31ratio16_vw4_training_history.json  mobilenet_FT_dropout_filters64trunk16block17ratio16_vw4_training_history.json  mobilenet_FT_filters64trunk16block16ratio16_vw4_training_history.json  mobilenet_filters64trunk48block8ratio16_vw4_training_history.json  mobilenet_fullytrain_training_history.json  mobilenet_se_adam_silu_mixnet_fullytrain_training_history.json  mobilenet_se_adam_silu_mixnet_val4_fullytrain_2_training_history.json  mobilenet_se_changed_filters64trunk48block7ratio16_vw2_training_history.json  optimal_resnet_GAP_value_head_batch_32_training_history.json  optimal_resnet_SAP_value_head_batch_32_training_history.json  optimal_resnet_alphazero_value_head_batch_32_training_history.json  resnet_GAP_fullytrain_training_history.json  resnet_model_adaptive_lr_batch_128_training_history.json  resnet_model_fixed_lr_training_history.json
deep_learning/Models/: mobilenet_FT2_filters32trunk16block31ratio16_vw4.h5  mobilenet_FT2_filters64trunk16block16ratio16_vw4.h5  mobilenet_FT2_filters64trunk48block8ratio16_vw4.h5  mobilenet_FT3_cosine_filters32trunk16block31ratio16_vw4.h5  mobilenet_fullytrain.h5  (+11 more)
reinforcement_learning/: On_Policy_Monte_Carlo .ipynb  SARSA_QLearning.ipynb  Value_Policy_Iteration.ipynb
(+9 files in other folders)
