[tool.poetry]
package-mode = false
name = "iasd-works"
version = "0.1.0"
description = "This is a repository with all my projects of the master IASD (Artificial Intelligence, Systems and Data) - University Dauphine-PSL"
authors = ["Pierre Neveu"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = ">=1.26.0,<2.1.0"
gymnasium = {extras = ["toy-text"], version = "^1.0.0"}
ipykernel = "^6.29.5"
matplotlib = "^3.9.3"
pybind11 = "^2.13.6"
tensorflow-io-gcs-filesystem = "^0.37.1"
tensorflow = "^2.18.0"
keras = "^3.7.0"
networkx = "^3.4.2"
pandas = "^2.2.3"
faker = "^33.1.0"
redis = "^5.2.1"
scipy = "^1.14.1"
torch = "^2.5.1"
openpyxl = "^3.1.5"
weasyprint = "^63.1"
datasets = "^3.2.0"
transformers = "^4.48.1"
pyspark = "^3.5.5"

[tool.poetry.group.dev.dependencies]
pybind11 = "^2.13.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"